# choose-your-own-implementation

./: CLAUDE.md  DESIGN.md  KANBAN.md  STORY_CONTEXT.md  pyproject.toml  state.py  workflow.py
.github/: CODEOWNERS
.github/scripts/: sync_kanban.py
claude/plugins/choose-your-own-implementation/: DESIGN.md
claude/plugins/development-workflow/: DESIGN.MD
tests/: test_state.py
